@@ -10,6 +10,10 @@ std_unity_list =	 						\
 
 run_unity =	ruby $(std_unity_list)
 
+EXTRA_DIST =				\
+	testconf.yml			\
+	$(NULL)
+
 check_PROGRAMS = sec-2853
 
 # HMS: we may not need some of these:
